Revert "SAND-12 - [Main/java] try to use this algorithm but turns out too high complexity, planning to revert"
This reverts commit b1c519101435a5c35b91cf64f6a678d44f17fe7a.